--- a/html/index.html
+++ b/html/index.html
@@ -14,30 +14,39 @@
 
 <div class="section1" style="height: 75px">
 	<h1 id="head">NYC Subway Vynil</h1>
-
-
 	<div class="nav">
-		<a href="create">MyVynil</a>
+		<h2><a href="create">MyVynil</a></h2>	
 	</div>
-
 	<div class="nav">
-		<a href="create">Gallery</a>
+		<h2><a href="create">Gallery</a></h2>
 	</div>
-
 	<div class="nav">
-		<a href="create">Create</a>
+		<h2><a href="create">Create</a></h2>
 	</div>
 </div>
 
 <div class="section2">
-
 	<div>
-		<img class="test" src="img/speckle.jpg">
+		<img class="img" src="img/speckle.jpg">
 	</div>
-
-
+</div>
+	
+<div class="section3">
+	<h2>Base</h2>
+	<h2>Speckle 1</h2>
+	<h2>Speckle 2</h2>
+	<h2>Speckle 3</h2>
+	<h2>Speckle 4</h2>
+	<h2>Speckle 5</h2>
 </div>
 
+<div class="section4">
+	<div class="colorpick"></div>
+	<div class="colorpick"></div>
+	<div class="colorpick"></div>
+	<div class="colorpick"></div>
+	<div class="colorpick"></div>
+</div>
 
 
 </body>
